# oatpp-bazel-starter

./: .gitignore  Dockerfile  MODULE.bazel  README.md
.github/workflows/: bazel.yml
app/: App.cpp  AppComponent.hpp  BUILD.bazel
app/controller/: HealthController.cpp  HealthController.hpp
app/dto/: ResultDataDto.hpp
app/interceptor/: AuthInterceptor.cpp  AuthInterceptor.hpp
app/interceptor/libtraceable/: libtraceable.h
patches/: BUILD.bazel
patches/rules_foreign_cc/: foreign_cc.built_tools.pkgconfig_build.bzl.patch
