cc_binary(
    name = "app",
    srcs = glob(
        [
            "**/*.hpp",
            "**/*.cpp",
        ],
    ),
    cxxopts = select({
        "@platforms//os:windows": [
            "/std:c++17",
        ],
        "//conditions:default": [
            "-std=c++17",
        ],
    }),
    includes = ["."],
    linkopts = select({
        "@platforms//os:windows": [
            "-std=c++17",
        ],
        "//conditions:default": [
            "-std=c++11",
            "-ldl",
            "-fPIC",
        ],
    }),
    deps = [
        "//third-party/oatpp:oatpp_all",
        ":libtraceable",
    ],
)

cc_library(
    name = "libtraceable",
    srcs = [
        "interceptor/libtraceable/libtraceable_full.a",
    ],
    hdrs = [
        "interceptor/libtraceable/libtraceable.h",
    ],
    visibility = ["//visibility:public"],
)
